--- a/.github/workflows/mindsdb.yml
+++ b/.github/workflows/mindsdb.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install dependencies
       run: |
         #python -m pip install --upgrade pip==21.0.1
-        pip install flake8
+        pip install flake8==6.0.0
         pip install 'pymssql >= 2.1.4'
         pip install boto3
         pip install --no-cache-dir .
