--- a/.github/workflows/mindsdb.yml
+++ b/.github/workflows/mindsdb.yml
@@ -62,6 +62,8 @@ jobs:
           pip install git+https://github.com/mindsdb/lightwood.git@staging --upgrade --no-cache-dir
     - name: Run integration api and flow tests
       run: |
+        pip show pycodestyle
+        pip show flake8
         python3 -m flake8
 
         if [ "$RUNNER_OS" == "Linux" ]; then
